# node-speex-resampler

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  Readme.md  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml
app/: index.d.ts  index.js  speex_wasm.d.ts  speex_wasm.js  test.js
resources/: 24000hz_mono_test.pcm  24000hz_test.pcm  44100hz_test.pcm
scripts/: Dockerfile-cross-nodejs-build  Dockerfile_crossarch  build_emscripten.sh  build_for_arch.sh  cross-build.sh
src/: index.d.ts  index.js  index.ts  resampler.cc  resampler.hh  speex_wasm.js  test.js  test.ts
